testdata/invalid/fncall_invalid_02.lisp
;;error:3:11-12:unknown symbol
(defcolumns (X :i16) (Y :i8))
(defcall (Z) f (X))
